# cpp-3term

./: backgroundthread.cpp  testbackgroundthread.cpp
addrinfo/: CMakeLists.txt  addrinfo_raii.cpp  addrinfo_raii.h  epoll_raii.cpp  epoll_raii.h  main.cpp  server.cpp  server.h  socket_raii.cpp  socket_raii.h  timer_raii.cpp  timer_raii.h
my_grep/: README.md  backgroundthread.cpp  backgroundthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_grep.pro  testbackgroundthread.h
my_grep/tests/heap/: main.cpp
my_grep/tests/poems/: fifth.txt  second.txt  third.txt
